--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Anmol Sharma",
   "license": "MIT",
   "homepage": "https://github.com/Bitshala-Incubator/silent-pay",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/Bitshala-Incubator/silent-pay.git"
